Fix button text color with Dark Mode (#9)

--- a/src/Components/Button/Button.module.sass
+++ b/src/Components/Button/Button.module.sass
@@ -6,7 +6,7 @@
 .button
     position: relative
     display: inline-block
-    color: colors.$text-inverted
+    color: colors.$text-on-color
     background-color: colors.$accent
     padding: 8px 16px
     border-radius: dimensions.$border-radius
